--- a/app/src/package.json
+++ b/app/src/package.json
@@ -14,6 +14,7 @@
     "gulp": "^4.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-csso": "^3.0.1",
+    "gulp-imagemin": "^5.0.3",
     "gulp-plumber": "^1.2.1",
     "gulp-uglify-es": "^1.0.4"
   },
