--- a/app/src/package.json
+++ b/app/src/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.3",
     "babel-preset-env": "^1.7.0",
     "gulp-autoprefixer": "^6.1.0",
